[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/Light_header.tres" type="DynamicFont" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Light_normal.tres" type="DynamicFont" id=3]

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 22.653
margin_top = 22.653
margin_right = 134.653
margin_bottom = 94.653
custom_fonts/font = ExtResource( 1 )
text = "A+ -chat"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ID" type="Label" parent="Label"]
margin_top = 59.0
margin_right = 515.0
margin_bottom = 83.0
custom_fonts/font = ExtResource( 3 )
text = "Signed in as <>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="PanelContainer" parent="Label"]
margin_top = 83.0
margin_right = 938.0
margin_bottom = 444.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Label/Container"]
margin_left = 7.0
margin_top = 173.0
margin_right = 931.0
margin_bottom = 187.0
text = "Hi!"

[node name="Users" type="HTTPRequest" parent="."]

[node name="Me" type="HTTPRequest" parent="."]

[node name="Chat" type="HTTPRequest" parent="."]

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 23.0
margin_top = 494.0
margin_right = 632.0
margin_bottom = 557.0
placeholder_text = "Type here..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="LineEdit"]
margin_left = 609.0
margin_right = 751.0
margin_bottom = 63.0
text = "Send!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Send" type="HTTPRequest" parent="LineEdit"]
[connection signal="request_completed" from="Users" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="Me" to="." method="_on_Me_request_completed"]
[connection signal="request_completed" from="Chat" to="." method="_on_Chat_request_completed"]
[connection signal="pressed" from="LineEdit/Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="LineEdit/Send" to="." method="_on_Send_request_completed"]
